# searchy

./: .gitignore  README.md  setup.cfg
src/searchy/: cli.py
