[metadata]
name = searchy
version = attr: searchy.__version__
author = Jorge Courett
author_email = jorge.courett@gmail.com
url = some.url
description = Searcheable engine
long_description = file: README.md
long_description_content_type = text/markdown
keywords = search, cli
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
install_requires =
    whoosh
    typer[all]
    simple_term_menu
    prompt_toolkit
    pygments

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    searchy = searchy.cli:app

[options.package_data]
example = *.txt
* = README.md